...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iLO-ta-c0C" userLabel="Like Button">
                                                    <rect key="frame" x="342" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="like_button_off"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="Lho-oS-ubh"/>
                                                        <constraint firstAttribute="height" constant="44" id="wKn-KT-QYM"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="like_button_on"/>
...
                                <connections>
                                    <action selector="didTapSaveButton" destination="aft-B1-qE7" eventType="touchUpInside" id="2e9-wS-FfD"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B46-Hw-7xH">
                                <rect key="frame" x="8" y="8" width="43" height="43"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav_back_button_white"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="43" id="E5u-ZF-ovq"/>
                                    <constraint firstAttribute="height" constant="43" id="tNC-mm-t2q"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="nav_back_button_white"/>
...
                                    <constraint firstAttribute="width" constant="60" id="lvY-fp-IVp"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FoS-rc-1yi">
                                <rect key="frame" x="16" y="702" width="370" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="1xM-dS-hg3"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
                                    <color key="titleColor" name="YP Black"/>
...
                                <rect key="frame" x="0.0" y="40" width="402" height="4"/>
                                <color key="progressTintColor" name="YP Black"/>
                            </progressView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="uIF-Is-UGj"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView"/>
                        <constraints>
                            <constraint firstItem="48U-BI-I5d" firstAttribute="leading" secondItem="uIF-Is-UGj" secondAttribute="leading" id="3SX-Kf-5Jx"/>
                            <constraint firstItem="uIF-Is-UGj" firstAttribute="trailing" secondItem="82F-V3-gqV" secondAttribute="trailing" id="49a-fT-6lz"/>
                            <constraint firstItem="7UC-Gz-kXV" firstAttribute="leading" secondItem="Hlg-H3-c7x" secondAttribute="leading" id="Dmx-8Q-hcX"/>
                            <constraint firstItem="7UC-Gz-kXV" firstAttribute="trailing" secondItem="Hlg-H3-c7x" secondAttribute="trailing" id="TFA-CC-tWd"/>
                            <constraint firstAttribute="bottom" secondItem="7UC-Gz-kXV" secondAttribute="bottom" id="VoM-IS-Egb"/>
...
